--- a/nzbget.conf.example
+++ b/nzbget.conf.example
@@ -513,7 +513,7 @@ NzbCleanupDisk=no
 #      0 = not checked: par-check disabled or nzb-file does not contain any
 #          par-files;
 #      1 = checked and failed to repair;
-#      2 = checked and sucessfully repaired;
+#      2 = checked and successfully repaired;
 #      3 = checked and can be repaired but repair is disabled;
 #  5 - state of nzb-job:
 #      0 = there are more collections in this nzb-file queued;
@@ -523,6 +523,10 @@ NzbCleanupDisk=no
 #      1 = current par-job or any of the previous par-jobs for the
 #          same nzb-files failed;
 #  7 - category assigned to nzb-file (can be empty string).
+# Return value: the script may return special value "28161" (hex 0x6E01 which 
+# means "n1" or "nzbget return code 1") to request nzbget to do 
+# par-check/repair. All other returns code are currently ignored, but for
+# future compatibility use value "0", which is a common default result code).
 # NOTE: The parameter "state of nzb-job" is very important and MUST be checked 
 # even in the simplest scripts.
 # If par-check is enabled and nzb-file contains more than one collection
@@ -545,6 +549,16 @@ NzbCleanupDisk=no
 # not have any par-files, this collection will not be detected.
 # For example, for nzb-file containing three collections but only two par-sets, 
 # the postprocess will be called two times - after processing of each par-set.
+# NOTE: using the special return value ("28161") for requesting of 
+# par-check/repair allows to organize the delayed parcheck. To do that:
+#   1) set options: LoadPars=one, ParCheck=no, ParRepair=yes;
+#   2) in post-process-script check the parameter "result of par-check". If 
+#      it is "0", that means, the script is called the first time. Try to 
+#      unpack files. If unpack fails, exit the script with magic return value;
+#   3) nzbget will start par-check/repair. After that it calls the script again;
+#   4) on second pass the parameter "result of par-check" will have value 
+#      greater than "0". If it is "2" ("checked and successfully repaired")
+#      you can try unpack again. 
 # NOTE: an example script for unrarring is provided within distribution 
 # in file "postprocess-example.sh".
 PostProcess=
