--- a/nzbget.conf.example
+++ b/nzbget.conf.example
@@ -534,15 +534,13 @@ NzbCleanupDisk=no
 #          same nzb-files failed;
 #  7 - category assigned to nzb-file (can be empty string).
 # Return value: nzbget processes the exit code returned by the script:
-#  0     - all OK;
-#  28161 - request nzbget to do par-check/repair for current collection in the 
-#          current nzb-file;
-#  28162 - request nzbget to do par-check/repair for all collections in the 
-#          current nzb-file;
-# For info: value "28161" in hex-form is 0x6E01 and means "n1" or "nzbget 
-# return code 1".
+#  0  - all OK;
+#  91 - request nzbget to do par-check/repair for current collection in the 
+#       current nzb-file;
+#  92 - request nzbget to do par-check/repair for all collections in the 
+#       current nzb-file;
 # All other return codes are currently ignored, but for future compatibility 
-# use value "0" or do not specify any exit code (in this case system use code
+# use value "0" (or do not specify any exit code, in this case system uses code
 # "0" by default).
 # NOTE: The parameter "state of nzb-job" is very important and MUST be checked 
 # even in the simplest scripts.
@@ -565,7 +563,7 @@ NzbCleanupDisk=no
 # the postprocess will be called two times - after processing of each par-set.
 # NOTE: if nzbget doesn't find any collections it calls PostProcess once
 # with empty string for parameter "name of par-file";
-# NOTE: using the special return value ("28161") for requesting of 
+# NOTE: the using of special return values (91 and 92) for requesting of 
 # par-check/repair allows to organize the delayed parcheck. To do that:
 #   1) set options: LoadPars=one, ParCheck=no, ParRepair=yes;
 #   2) in post-process-script check the parameter "result of par-check". If 
