--- a/config.h.in
+++ b/config.h.in
@@ -49,6 +49,9 @@
 /* Define to 1 to use OpenSSL library for TLS/SSL-support. */
 #undef HAVE_OPENSSL
 
+/* Define to 1 if libpar2 supports cancelling (needs a special patch) */
+#undef HAVE_PAR2_CANCEL
+
 /* Define to 1 if stat64 is supported */
 #undef HAVE_STAT64
 
