--- a/Makefile.in
+++ b/Makefile.in
@@ -219,6 +219,7 @@ nzbget_SOURCES = ArticleDownloader.cpp ArticleDownloader.h BinRpc.cpp BinRpc.h \
 
 EXTRA_DIST = nzbget.conf.example postprocess-example.sh \
 	win32.h NTService.cpp NTService.h \
+	libpar2-0.2-bugfixes.patch libpar2-0.2-cancel.patch \
 	libpar2-0.2-MSVC8.patch libsigc++-2.0.18-MSVC8.patch \
 	Makefile.cvs nzbget.kdevelop nzbget.sln nzbget.vcproj
 
