updated configure-script for better compatibility with FreeBSD
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@266 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.in
+++ b/Makefile.in
@@ -128,8 +128,6 @@ INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
-LIBSIGC_CFLAGS = @LIBSIGC_CFLAGS@
-LIBSIGC_LIBS = @LIBSIGC_LIBS@
 LN = @LN@
 LTLIBOBJS = @LTLIBOBJS@
 MAKE = @MAKE@
@@ -188,6 +186,10 @@ infodir = @infodir@
 install_sh = @install_sh@
 libdir = @libdir@
 libexecdir = @libexecdir@
+libsigc_CFLAGS = @libsigc_CFLAGS@
+libsigc_LIBS = @libsigc_LIBS@
+libxml2_CFLAGS = @libxml2_CFLAGS@
+libxml2_LIBS = @libxml2_LIBS@
 localedir = @localedir@
 localstatedir = @localstatedir@
 mandir = @mandir@
