updated example configuration file
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@270 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf.example
+++ b/nzbget.conf.example
@@ -765,7 +765,7 @@ PostPauseQueue=no
 # Examples: "1-7", "1-5", "5,6", "1-5, 7".
 #Task1.WeekDays=1-7
 
-# Command to be executed (Pause, Unpause, DownloadRate).
+# Command to be executed (Pause, Unpause, DownloadRate, Process).
 #
 # Possible commands:
 #   Pause        - pauses download;
