--- a/Makefile.in
+++ b/Makefile.in
@@ -66,7 +66,7 @@ am_nzbget_OBJECTS = ArticleDownloader.$(OBJEXT) BinRpc.$(OBJEXT) \
 	RemoteServer.$(OBJEXT) Scheduler.$(OBJEXT) \
 	ScriptController.$(OBJEXT) ServerPool.$(OBJEXT) TLS.$(OBJEXT) \
 	Thread.$(OBJEXT) Util.$(OBJEXT) XmlRpc.$(OBJEXT) \
-	nzbget.$(OBJEXT)
+	nzbget.$(OBJEXT) svn_version.$(OBJEXT)
 nzbget_OBJECTS = $(am_nzbget_OBJECTS)
 nzbget_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I.
@@ -209,7 +209,7 @@ nzbget_SOURCES = ArticleDownloader.cpp ArticleDownloader.h BinRpc.cpp BinRpc.h \
 	QueueCoordinator.h QueueEditor.cpp QueueEditor.h RemoteClient.cpp RemoteClient.h \
 	RemoteServer.cpp RemoteServer.h Scheduler.cpp Scheduler.h ScriptController.cpp \
 	ScriptController.h ServerPool.cpp ServerPool.h TLS.cpp TLS.h Thread.cpp Thread.h Util.cpp \
-	Util.h XmlRpc.cpp XmlRpc.h nzbget.cpp nzbget.h
+	Util.h XmlRpc.cpp XmlRpc.h nzbget.cpp nzbget.h svn_version.cpp
 
 EXTRA_DIST = nzbget.conf.example postprocess-example.sh \
 	win32.h NTService.cpp NTService.h \
@@ -336,6 +336,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Util.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/XmlRpc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nzbget.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/svn_version.Po@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	if $(CXXCOMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ $<; \
@@ -623,6 +624,43 @@ uninstall-am: uninstall-binPROGRAMS uninstall-info-am
 	tags uninstall uninstall-am uninstall-binPROGRAMS \
 	uninstall-info-am
 
+
+# Determining subversion revision:
+# 1) If directory ".svn" exists we take revision from it using program svnversion (part of subversion package)
+#    File is recreated only if revision number was changed.
+# 2) If directory ".svn" doesn't exists we keep and reuse file "svn_version.cpp",
+#    which was possibly created early.
+# 3) If neither directory ".svn" nor file "svn_version.cpp" are available
+#    we create new file "svn_version.c" with empty revision number.
+svn_version.cpp: FORCE
+	@ if test -d ./.svn ; then \
+		V="$(shell svnversion -n .)"; \
+		H="$(shell test -f ./svn_version.cpp && head -n 1 svn_version.cpp)"; \
+		if test "/* $$V */" != "$$H" ; then \
+			( \
+			echo "/* $$V */" ;\
+			echo "/* This file is automatically regenerated on each build. Do not edit it. */" ;\
+			echo "const char* svn_version(void)" ;\
+			echo "{" ;\
+			echo "	const char* SVN_Version = \"$$V\";" ;\
+			echo "	return SVN_Version;" ;\
+			echo "}" ;\
+			) > svn_version.cpp ; \
+		fi \
+	elif test -f ./svn_version.cpp ; then \
+		test "ok, reuse existing file"; \
+	else \
+		( \
+		echo "/*  */" ;\
+		echo "/* This file is automatically regenerated on each build. Do not edit it. */" ;\
+		echo "const char* svn_version(void)" ;\
+		echo "{" ;\
+		echo "	const char* SVN_Version = \"\";" ;\
+		echo "	return SVN_Version;" ;\
+		echo "}" ;\
+		) > svn_version.cpp ; \
+	fi
+FORCE:
 
 clean-bak: rm *~
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
